--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,7 +29,7 @@ nav:
     - File Structure: reference/file-structure.md
     - Packages: reference/packages.md
     - Builders: reference/builders.md
-    - Usage: reference/usage.md
+    - Linkage: reference/linkage.md
     - Expressions: reference/expressions.md
     - Command-Line Interface: reference/command-line.md
     - Environment Variables: reference/environment-vars.md
