--- a/mopack/defaults/glu.yml
+++ b/mopack/defaults/glu.yml
@@ -1,8 +1,8 @@
-usage:
-  path: &path_system_usage
+linkage:
+  path: &path_system_linkage
     - if: target_platform == 'windows'
       libraries: [glu32]
     - if: target_platform == 'darwin'
       libraries: [{type: framework, name: OpenGL}]
     - libraries: [GLU]
-  system: *path_system_usage
+  system: *path_system_linkage
