--- a/mopack/defaults/glut.yml
+++ b/mopack/defaults/glut.yml
@@ -1,8 +1,8 @@
-usage:
-  path: &path_system_usage
+linkage:
+  path: &path_system_linkage
     - if: target_platform == 'windows'
       libraries: [glut32]
     - if: target_platform == 'darwin'
       libraries: [{type: framework, name: GLUT}]
     - libraries: [glut]
-  system: *path_system_usage
+  system: *path_system_linkage
