--- a/mopack/defaults/boost.yml
+++ b/mopack/defaults/boost.yml
@@ -15,13 +15,13 @@ linkage:
           - '^#\s*define\s+BOOST_LIB_VERSION\s+"([\d_]+)"'
           - ['_', '.']
       include_path: >-
-        ${{ env['BOOST_INCLUDEDIR'] || (
-          env['BOOST_ROOT'] ? env['BOOST_ROOT'] + '/include' : null
-        ) }}
+        ${{ symbols['srcdir'] ||
+            env['BOOST_INCLUDEDIR'] ||
+            (env['BOOST_ROOT'] ? env['BOOST_ROOT'] + '/include' : null) }}
       library_path: >-
-        ${{ env['BOOST_LIBRARYDIR'] || (
-          env['BOOST_ROOT'] ? env['BOOST_ROOT'] + '/lib' : null
-        ) }}
+        ${{ symbols['stagedir'] ? symbols['stagedir'] + '/lib' :
+            env['BOOST_LIBRARYDIR'] ||
+            (env['BOOST_ROOT'] ? env['BOOST_ROOT'] + '/lib' : null) }}
       headers: [boost/version.hpp]
       libraries: null
       submodule_map: null
@@ -35,9 +35,9 @@ linkage:
           # doesn't have any libraries (unless the user overrides it), so
           # the base library_path usually won't be used.
           library_path: >-
-            ${{ env['BOOST_LIBRARYDIR'] || (
-              env['BOOST_ROOT'] ? env['BOOST_ROOT'] + '/lib' : null
-            ) }}
+            ${{ symbols['stagedir'] ? symbols['stagedir'] + '/lib' :
+                env['BOOST_LIBRARYDIR'] ||
+                (env['BOOST_ROOT'] ? env['BOOST_ROOT'] + '/lib' : null) }}
           libraries: boost_$submodule
         thread:
           <<: *submodule_map
