--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 license_file = LICENSE
 
 [flake8]
-extend-exclude = build,dist,deb_dist
+extend-exclude = build,dist,deb_dist,test/stage
 extend-ignore = E201,E202,E221,F403,F405
 filename = *.py
 
