--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         compiler: [cc, msvc]
-        python-version: ['3.9', '3.10', '3.11']
+        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
         conan-version: ['1.*']
 
         include:
@@ -31,15 +31,15 @@ jobs:
              conan-version: '1.*'}
 
           # Conan 2.x builds
-          - {os: ubuntu-latest, compiler: cc, python-version: '3.11',
+          - {os: ubuntu-latest, compiler: cc, python-version: '3.13',
              conan-version: '2.*', extra-tests: [apt, mingw-cross]}
-          - {os: windows-latest, compiler: cc, python-version: '3.11',
+          - {os: windows-latest, compiler: cc, python-version: '3.13',
              conan-version: '2.*', skipped-tests: [boost, qt]}
-          - {os: windows-latest, compiler: msvc, python-version: '3.11',
+          - {os: windows-latest, compiler: msvc, python-version: '3.13',
              conan-version: '2.*', msvc-version: '14.4',
              win-sdk: '10.0.20348.0', boost-version: '1.80.0',
              qt-version: '5.15.2'}
-          - {os: macos-latest, compiler: cc, python-version: '3.11',
+          - {os: macos-latest, compiler: cc, python-version: '3.13',
              conan-version: '2.*'}
 
           # Extra settings for matrix builds
@@ -245,10 +245,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python 3.11
+      - name: Set up Python 3.13
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: '3.13'
       - name: Install dependencies
         run: |
           pip install '.[test]'
