--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-14]
         compiler: [cc, msvc]
         python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
         conan-version: ['2.*']
@@ -37,7 +37,7 @@ jobs:
              conan-version: '1.*', msvc-version: '14.4',
              win-sdk: '10.0.19041.0', boost-version: '1.80.0',
              qt-version: '5.15.2'}
-          - {os: macos-latest, compiler: cc, python-version: '3.13',
+          - {os: macos-14, compiler: cc, python-version: '3.13',
              conan-version: '1.*'}
 
           # Extra settings for matrix builds
@@ -49,10 +49,8 @@ jobs:
         exclude:
           - os: ubuntu-latest
             compiler: msvc
-          - os: macos-latest
+          - os: macos-14
             compiler: msvc
-          - os: macos-latest
-            python-version: '3.7'
       fail-fast: false
     env:
       MOPACK_EXTRA_TESTS: ${{ join(matrix.extra-tests, ' ') }}
