--- a/test/data/hello-cmake/CMakeLists.txt
+++ b/test/data/hello-cmake/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.0...4.0)
 project(hello)
 
 add_library(hello SHARED src/hello.cpp)
