--- a/test/data/mopack-boost-source.yml
+++ b/test/data/mopack-boost-source.yml
@@ -1,6 +1,7 @@
 packages:
   boost:
     origin: tarball
+    inherit_defaults: true
     url: https://archives.boost.io/release/1.89.0/source/boost_1_89_0.tar.bz2
     build:
       - type: custom
