Use `submodule_linkage` instead of `submodule_map`
This is more consistent with how packages are conditionally defined.

--- a/mopack/defaults/Qt5.yml
+++ b/mopack/defaults/Qt5.yml
@@ -3,12 +3,11 @@ origin:
     submodules: '*'
 linkage:
   system:
-    submodule_map:
-      '*':
-        &submodule_map
-        dependencies: ['Qt5[Core]']
-        pcname: Qt5$submodule
-        include_path: >-
+    submodule_linkage:
+      - if: submodule == 'Core'
+        headers: [QtCore, QtCore/QtCore]
+        pcname: Qt5Core
+        include_path: &include_path >-
           ${{ env['QT_INCLUDEDIR'] ?
                 [ env['QT_INCLUDEDIR'],
                   env['QT_INCLUDEDIR'] + '/Qt' + submodule ] :
@@ -16,15 +15,16 @@ linkage:
                   [ env['QT_ROOT'] + '/include',
                     env['QT_ROOT'] + '/include/Qt' + submodule ] :
                   null }}
-        library_path: >-
+        library_path: &library_path >-
           ${{ env['QT_LIBRARYDIR'] || (
             env['QT_ROOT'] ? env['QT_ROOT'] + '/lib' : null
           ) }}
+        libraries: [Qt5Core]
+      # XXX: Other Qt submodules probably need additional dependencies, but the
+      # above should be sufficient for basic cases.
+      - dependencies: ['Qt5[Core]']
+        pcname: Qt5$submodule
+        include_path: *include_path
+        library_path: *library_path
         headers: [Qt$submodule]
         libraries: [Qt5$submodule]
-      Core:
-        <<: *submodule_map
-        dependencies: null
-        headers: [QtCore, QtCore/QtCore]
-      # XXX: Other Qt submodules probably need additional dependencies, but
-      # the above should be sufficient for basic cases.
