Redesign `submodules` field
This moves `submodules.required` to `submodule_required` and turns `submodules`
into a dictionary. Currently the dict's value is nothing, but eventually, this
will hold submodule-specific properties, like submodule dependencies.

--- a/mopack/defaults/boost.yml
+++ b/mopack/defaults/boost.yml
@@ -1,8 +1,7 @@
 origin:
   '*':
-    submodules:
-      names: '*'
-      required: false
+    submodules: '*'
+    submodule_required: false
 
 linkage:
   path: &path_system_linkage
