--- a/test/data/mopack-directory-cmake.yml
+++ b/test/data/mopack-directory-cmake.yml
@@ -3,3 +3,9 @@ packages:
     origin: directory
     path: hello-cmake
     build: cmake
+    linkage:
+      type: path
+      version: "1.0"
+      # XXX: Pass this via `include_path` instead?
+      compile_flags: -I$srcdir/include
+      library_path: .
