--- a/mopack/defaults/boost.yml
+++ b/mopack/defaults/boost.yml
@@ -7,8 +7,7 @@ origin:
 linkage:
   path: &path_system_linkage
     - &path_linkage
-      if: target_platform == 'windows'
-      auto_link: true
+      if: target_platform == 'windows' && auto_link
       version:
         type: regex
         file: boost/version.hpp
@@ -28,7 +27,6 @@ linkage:
       submodule_linkage: null
     - <<: *path_linkage
       if: true
-      auto_link: false
       submodule_linkage:
         - if: submodule == 'thread'
           dependencies: ['pthread']
